crates/squawk_parser/src/snapshots/squawk_parser__test__create_operator_ok.snap
---
source: crates/squawk_parser/src/test.rs
input_file: crates/squawk_parser/test_data/ok/create_operator.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_OPERATOR_STMT
    CREATE_KW "create"
    WHITESPACE " "
    OPERATOR_KW "operator"
    WHITESPACE " "
    R_ANGLE ">"
    WHITESPACE " "
    L_PAREN "("
    WHITESPACE "\n  "
    NAME
      FUNCTION_KW "function"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    PATH_TYPE
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "f"
    WHITESPACE "\n"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- procedure"
  WHITESPACE "\n"
  CREATE_OPERATOR_STMT
    CREATE_KW "create"
    WHITESPACE " "
    OPERATOR_KW "operator"
    WHITESPACE " "
    CUSTOM_OP
      POUND "#"
    WHITESPACE " "
    L_PAREN "("
    WHITESPACE "\n  "
    NAME
      PROCEDURE_KW "procedure"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    PATH_TYPE
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "p"
    WHITESPACE "\n"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_OPERATOR_STMT
    CREATE_KW "create"
    WHITESPACE " "
    OPERATOR_KW "operator"
    WHITESPACE " "
    PATH
      PATH
        PATH
          PATH_SEGMENT
            NAME_REF
              IDENT "foo"
        DOT "."
        PATH_SEGMENT
          NAME_REF
            IDENT "bar"
      DOT "."
      PATH_SEGMENT
    CUSTOM_OP
      R_ANGLE ">"
      R_ANGLE ">"
      MINUS "-"
      POUND "#"
    WHITESPACE " "
    L_PAREN "("
    WHITESPACE "\n  "
    NAME
      FUNCTION_KW "function"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    PATH_TYPE
      PATH
        PATH
          PATH
            PATH_SEGMENT
              NAME_REF
                IDENT "foo"
          DOT "."
          PATH_SEGMENT
            NAME_REF
              IDENT "bar"
        DOT "."
        PATH_SEGMENT
          NAME_REF
            IDENT "f"
    COMMA ","
    WHITESPACE "\n  "
    NAME
      IDENT "leftarg"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    CHAR_TYPE
      VARCHAR_KW "varchar"
      L_PAREN "("
      ARG_LIST
        ARG
          LITERAL
            INT_NUMBER "100"
        R_PAREN ")"
    COMMA ","
    WHITESPACE "\n  "
    NAME
      IDENT "rightarg"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    PATH_TYPE
      PATH
        PATH
          PATH_SEGMENT
            NAME_REF
              IDENT "foo"
        DOT "."
        PATH_SEGMENT
          NAME_REF
            BIGINT_KW "bigint"
    COMMA ","
    WHITESPACE "\n  "
    NAME
      IDENT "commutator"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    CUSTOM_OP
      AMP "&"
      AMP "&"
      AMP "&"
      AMP "&"
    COMMA ","
    WHITESPACE "\n  "
    NAME
      IDENT "negator"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    CUSTOM_OP
      L_ANGLE "<"
      MINUS "-"
      R_ANGLE ">"
    COMMA ","
    WHITESPACE "\n  "
    NAME
      RESTRICT_KW "restrict"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    PATH_TYPE
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "r"
    COMMA ","
    WHITESPACE "\n  "
    NAME
      JOIN_KW "join"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    PATH_TYPE
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "j"
    COMMA ","
    WHITESPACE "\n  "
    NAME
      IDENT "hashes"
    COMMA ","
    WHITESPACE "\n  "
    NAME
      IDENT "merges"
    WHITESPACE "\n"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
